...
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary" />
        </com.google.android.material.appbar.AppBarLayout>

        <com.inlay.hotelroomservice.presentation.view.DetailsScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/img_hotel_image"
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:layout_margin="8dp"
                    android:onClick="@{() -> viewModel.openImageDialog()}"
                    android:scaleType="centerCrop"
                    android:src="@drawable/sample_hotel_item_img_500x300"
...
                    app:layout_constraintBottom_toBottomOf="@id/tv_hotel_rating"
                    app:layout_constraintStart_toEndOf="@id/tv_hotel_rating"
                    app:layout_constraintTop_toTopOf="@id/tv_hotel_rating"
                    tools:text="(1250)" />

                <include
                    android:id="@+id/details_chip_group"
                    layout="@layout/details_chip_group" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/restaurants_nearby"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    app:layout_constraintEnd_toStartOf="@+id/tv_restaurants_see_all"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/card_info" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_restaurants_see_all"
                    android:layout_width="wrap_content"
...
                    android:textAppearance="?attr/textAppearanceBody1"
                    app:layout_constraintBottom_toBottomOf="@id/tv_restaurants_nearby"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tv_restaurants_nearby" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card_restaurant_nearby"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
...

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:id="@+id/img_places_nearby_image"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_margin="8dp"
                            android:scaleType="centerCrop"
                            app:detailsImages="@{viewModel.restaurantNearbyPhoto}"
                            app:layout_constraintBottom_toBottomOf="parent"
...
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/attractions_nearby"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    app:layout_constraintEnd_toStartOf="@+id/tv_attractions_see_all"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/card_restaurant_nearby" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_attractions_see_all"
                    android:layout_width="wrap_content"
...
