...
    android:scrollbars="none"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/img_hotel_image">

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chips_amenities"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:singleLine="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_parking"
            style="@style/ParkingChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:text="@{viewModel.chipParkingText}"
            tools:text="Valet parking" />
...
